--- a/src/components/character-list/PersonList.css
+++ b/src/components/character-list/PersonList.css
@@ -1,4 +1,6 @@
-/* PersonList.css */
+.title {
+  color: #fff;
+}
 
 .person-list-container {
   text-align: center;
@@ -7,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .people-list {
@@ -41,8 +44,8 @@
   padding: 20px;
   color: #fff;
   width: calc(100% - 40px);
-  max-width: 600px; /* Set a max width */
-  text-align: left; /* Align text to the left for details */
+  height: 80vh;
+  text-align: left;
 }
 
 .pagination-controls {
